--- a/docs/snippets/_footer.mdx
+++ b/docs/snippets/_footer.mdx
@@ -16,7 +16,7 @@ import { Github, Globe, Linkedin } from "lucide-react";
     lineHeight: '1.7',
     marginBottom: '2rem'
   }}>
-    **Sawyer** (TheGreatAxios) is VP of Developer Success at [SKALE](https://skale.space) and building agents, blockchain, and healthcare products and tools.
+    Sawyer (TheGreatAxios) is VP Developer Sucecess at [SKALE](https://skale.space) and activley building AI systems and agents.
   </div>
 
   <div style={{
