--- a/docs/snippets/ProjectsFooter.mdx
+++ b/docs/snippets/ProjectsFooter.mdx
@@ -1,3 +1,3 @@
 ---
 
-*All projects are open source and available on GitHub. Contributions welcome.*
+Sawyer (TheGreatAxios) is VP Developer Sucecess at [SKALE](https://skale.space) and activley building AI systems and agents.
