Minor Grammer Fixes

--- a/docs/pages/blog/the-hidden-cost-of-agentic-commerce.mdx
+++ b/docs/pages/blog/the-hidden-cost-of-agentic-commerce.mdx
@@ -16,7 +16,7 @@ There is a hidden cost today to agentic commerce running onchain with x402 rails
 The hidden cost isn't the payment protocol or the integration complexity—it's the unpredictability of transaction costs at scale. When agents transact billions of times daily, variable gas costs and surge pricing make economic models impossible to predict.
 :::
 
-There are always complaints about how traditional PSPs are so expensive i.e the 2.x% + some amount of cents (e.g $0.3) which can result in many software sellers and physical merchants putting minimums on payments with a credit card, such as $5.
+There are always complaints about how traditional PSPs are so expensive i.e. the 2.x% + some amount of cents (e.g $0.3) which can result in many software sellers and physical merchants putting minimums on payments with a credit card, such as $5.
 
 | | Traditional PSP | EVM Chains | Solana | SKALE |
 |---|---|---|---|---|
@@ -54,7 +54,7 @@ High performance chains with massive compute limits (compared to traditional EVM
 
 **b. Horizontal Scalability**
 
-The part that is truly powerful is the horizontal scalability. This is is how cloud giants maintain (and often are actually able to make prices cheaper over time). The ability to continuously supply more and more compute means there is no cap when demand starts to grow; like we often see with other chains.
+The part that is truly powerful is the horizontal scalability. This is how cloud giants maintain (and often are actually able to make prices cheaper over time). The ability to continuously supply more and more compute means there is no cap when demand starts to grow; like we often see with other chains.
 
 ## How does this work?
 
@@ -94,4 +94,4 @@ SKALE's credit system and horizontal scalability offer a path forward: predictab
 
 As I explored in [The Role of Pay-Per-Tool in an Agentic World](/blog/the-role-of-pay-per-tool-in-an-agentic-world.mdx), the future of agentic systems depends on infrastructure that can scale sustainably. SKALE provides that foundation for x402 payments.
 
-x402 on SKALE, DM and I will help you integrate.
+x402 on SKALE, DM me and I'll help you integrate.
